--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>statistics</module>
         <module>exchange</module>
         <module>market</module>
+        <module>gateway</module>
     </modules>
 
     <parent>
