--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>exchange</module>
         <module>market</module>
         <module>gateway</module>
+        <module>discovery</module>
     </modules>
 
     <parent>
