--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,57 @@
 version: '3'
 services:
+  eureka-server:
+    build: ./discovery
+    ports:
+      - "8761:8761"
+    networks:
+      - microservices-net
   account-service:
     build: ./account
     ports:
       - "8080:8080"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
   admin-service:
     build: ./admin
     ports:
       - "8081:8080"
-    networks:
-      - microservices-net
-  discovery-service:
-    build: ./discovery
-    ports:
-      - "8761:8761"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
   exchange-service:
     build: ./exchange
     ports:
       - "8082:8080"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
   gateway-service:
     build: ./gateway
     ports:
       - "8085:8080"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
   market-service:
     build: ./market
     ports:
       - "8083:8080"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
   statistics-service:
     build: ./statistics
     ports:
       - "8084:8080"
+    depends_on:
+      - eureka-server
     networks:
       - microservices-net
 
