--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
   instance:
     preferIpAddress: true
 server:
