--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,50 +16,50 @@ services:
     networks:
       - microservices-net
 
-  admin-service:
-    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/admin-service:latest
-    ports:
-      - "8081:8080"
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-net
-
-  exchange-service:
-    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/exchange-service:latest
-    ports:
-      - "8082:8080"
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-net
-
-  gateway-service:
-    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/gateway-service:latest
-    ports:
-      - "8085:8080"
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-net
-
-  market-service:
-    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/market-service:latest
-    ports:
-      - "8083:8080"
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-net
-
-  statistics-service:
-    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/statistics-service:latest
-    ports:
-      - "8084:8080"
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-net
+#  admin-service:
+#    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/admin-service:latest
+#    ports:
+#      - "8081:8080"
+#    depends_on:
+#      - eureka-server
+#    networks:
+#      - microservices-net
+#
+#  exchange-service:
+#    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/exchange-service:latest
+#    ports:
+#      - "8082:8080"
+#    depends_on:
+#      - eureka-server
+#    networks:
+#      - microservices-net
+#
+#  gateway-service:
+#    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/gateway-service:latest
+#    ports:
+#      - "8085:8080"
+#    depends_on:
+#      - eureka-server
+#    networks:
+#      - microservices-net
+#
+#  market-service:
+#    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/market-service:latest
+#    ports:
+#      - "8083:8080"
+#    depends_on:
+#      - eureka-server
+#    networks:
+#      - microservices-net
+#
+#  statistics-service:
+#    image: 853228521229.dkr.ecr.us-east-1.amazonaws.com/coinserver/statistics-service:latest
+#    ports:
+#      - "8084:8080"
+#    depends_on:
+#      - eureka-server
+#    networks:
+#      - microservices-net
 
 networks:
   microservices-net:
