--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -25,9 +25,19 @@ jobs:
       - name: Install Maven
         run: sudo apt-get install -y maven
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry-type: "ecr"
+          region: us-east-1
 
       - name: Maven Build
         run: mvn clean package
@@ -68,12 +78,14 @@ jobs:
 
       - name: Deploy to EC2
         env:
+          AWS_REGION: us-east-1
+          AWS_ACCOUNT_ID: 853228521229
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_KEY: ${{ secrets.EC2_KEY }}
         run: |
-          echo "EC2_KEY" > ec2_key && chmod 600 ec2_key
-          ssh -o StrictHostKeyChecking=no -i $EC2_KEY $EC2_USER@$EC2_HOST << EOF
+          echo "${{ secrets.EC2_KEY }}" > ec2_key && chmod 600 ec2_key
+          ssh -o StrictHostKeyChecking=no -i ec2_key $EC2_USER@$EC2_HOST << EOF
             # Install Docker if not already installed
             if ! command -v docker &> /dev/null
             then
@@ -84,14 +96,4 @@ jobs:
             fi
           
             # Install Docker Compose if not already installed
-            if ! command -v docker-compose &> /dev/null
-            then
-                sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-                sudo chmod +x /usr/local/bin/docker-compose
-            fi
-          
-            # Login to ECR and pull latest images
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-            docker-compose -f /path/to/docker-compose.yml pull
-            docker-compose -f /path/to/docker-compose.yml up -d
-          EOF
+            if ! command -v docker-compose &>
