--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -41,9 +41,9 @@ jobs:
 
       - name: Build, Tag, and Push Docker Images
         env:
-          AWS_ACCOUNT_ID: 853228521229
-          AWS_REGION: us-east-1
-          SERVICE_PREFIX: coinserver/
+          AWS_ACCOUNT_ID: ${{secrets.AWS_ACCOUNT_ID}}
+          AWS_REGION: ${{secrets.AWS_REGION}}
+          SERVICE_PREFIX: ${{secrets.SERVICE_PREFIX}}
         run: |
           docker build -t account-service ./account
           docker tag account-service:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$SERVICE_PREFIX/account-service:latest
