--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       AWS_ACCOUNT_ID: 853228521229
       AWS_REGION: us-east-1
-      SERVICE_PREFIX: coinserver/
+      SERVICE_PREFIX: coinserver
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
