--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -82,7 +82,7 @@ jobs:
         run: |
           echo "${{ secrets.EC2_KEY }}" | tr -d '\r' > ec2_key
           chmod 600 ec2_key
-          ssh -tt -o StrictHostKeyChecking=no -i ec2_key $EC2_USER@$EC2_HOST << EOF
+          ssh -v -o StrictHostKeyChecking=no -i ec2_key $EC2_USER@$EC2_HOST << EOF
             # Install Docker if not already installed
             if ! command -v docker &> /dev/null
             then
