--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -80,7 +80,7 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_KEY: ${{ secrets.EC2_KEY }}
         run: |
-          echo "${{ secrets.EC2_KEY }}" > ec2_key && chmod 600 ec2_key
+          echo "$EC2_KEY" > ec2_key && chmod 600 ec2_key
           ssh -v -o StrictHostKeyChecking=no -i ec2_key $EC2_USER@$EC2_HOST << EOF
             # Install Docker if not already installed
             if ! command -v docker &> /dev/null
