--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
-  instance:
-    preferIpAddress: true
 server:
   port: 8080
 spring:
@@ -13,9 +7,9 @@ spring:
     allow-circular-references: true
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://database-1.cz6aoywes2lz.us-east-2.rds.amazonaws.com:5432/database-1
+    url: jdbc:postgresql://coindb.cj2aqekuqit4.us-east-1.rds.amazonaws.com:5432/coindb
     username: postgres
-    password: xiaobaitu123
+    password: Xiaobaitu123
   jpa:
     hibernate:
       ddl-auto: create-drop
