--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -4,3 +4,20 @@ server:
 spring:
   application:
     name: market
+  main:
+    allow-circular-references: true
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://my-pg-server2024.postgres.database.azure.com:5432/coindb
+    username: postgres
+    password: Xiaobaitu123
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
