--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
