--- a/market/pom.xml
+++ b/market/pom.xml
@@ -24,8 +24,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+<dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>4.11.0</version>
+</dependency>
     </dependencies>
     <build>
         <plugins>
